# rigel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  _rename_eta.pl  mamba_env.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
audit_output/: scenario_accuracy.csv  scenario_accuracy_report.md  test_suite_audit.md
conda/: meta.yaml
conda-build-artifacts/: channeldata.json  index.html
conda-build-artifacts/linux-64/: current_repodata.json  index.html  repodata_from_packages.json  rigel-0.3.3-py312h3fd9d12_0.conda
conda-build-artifacts/noarch/: index.html
deprecated/: bayes_count.py  counter.py.bak  gencode.py  hit_analysis.py  hulkrna_count.py  hulkrna_count2.py  hulkrna_count3.py  hulkrna_gather.py  hulkrna_index.py  pipeline.py.bak  run_benchmarks.sh
docs/: BENCHMARKING.md  BENCHMARKING_README.md  DESIGN_REVIEW.md  EM_PARAMETER_AUDIT.md  FIRST_PRINCIPLES_IMPLEMENTATION_PLAN.md  MANUAL.md  METHODS.md  PUBLISHING.md  THEORETICAL_EM_OBJECTIVE.md  THEORETICAL_MODEL.md  TODO.md  _write_readme.py  ablation_v2_analysis.md  adaptive_prior_sparsity_plan.md  alpha_sweep_egfr_report.md  bam_cpp_conversion_plan.md  benchmark_10_loci_nrna_double_counting.md  benchmark_10_loci_report.md  benchmark_comparison_report.md  benchmark_expanded_report.md  benchmark_full_genome_report.md  benchmark_hulkrna_vs_salmon.md  benchmark_pristine_10_regions_report.md  benchmark_pristine_report.md  benchmark_pvt1_competition_report.md  benchmark_pvt1_report.md  benchmark_realdata_report.md  benchmark_report_seed101.md  benchmark_results.json  calibration_stress_test_analysis.md  capacity_weighted_em_plan.md  capacity_weighted_plan2.md  capacity_weighted_warm_start_plan.md  cleanup_backlog_2026-02-18.md  cleanup_plan.md  code_review_2026-03-06.md  collapsed_index_implementation_plan.md  complex_locus_ablation_studies_v1.md  egfr_diagnosis_and_plan.md  em_configuration_pre_simplification.md  (+69 more)
docs/annotated_bam_fix/: IMPLEMENTATION_PLAN.md  TAG_REDESIGN.md  ZB_SPLICE_ARTIFACT_TAG.md  ZF_TAG_REDESIGN.md
docs/benchmark-v5/: analysis.md
docs/benchmark-v6/: analysis.md  benchmark_v4_analysis.md  minimap2_audit_2026_03_23.md  minimap2_regression_rootcause.md  pristine_benchmark_report.md
docs/benchmarks/: calibration_v4_baseline.md  star_vs_minimap2_benchmark.md  vcap_hybcap_real_data.md  vcap_hybcap_rigel_vs_salmon_kallisto_data.md  vcap_pristine_vs_dirty_report.md  vh_pearson_r_root_cause.md
docs/calibration/: CALIBRATION_ALGORITHM.md  CALIBRATION_ALGORITHM_V2.md  CALIBRATION_ALGORITHM_V3.md  CALIBRATION_V3_IMPLEMENTATION_PLAN.md  SESSION_HANDOFF_2026-04-23.md  anchored_empirical_bayes_implementation.md  anchored_empirical_bayes_plan.md  architecture.md  betabinom_strand_pilot_results.md  calibration_v4_em_mixture_plan.md  channel_fusion_hybrid_capture.md  density_nb_model_plan.md  gdna_implementation_log.md  gdna_locus_prior_deep_diagnostic.md  gdna_nrna_identifiability.md  jeffreys_corrected_prior_plan.md  jeffreys_prior_implementation_steps.md  nrna_derive_plan.md  nrna_gdna_misclassification_root_cause.md  srd_v1_audit.md  srd_v1_implementation.md  srd_v1_plan.md  srd_v1_results.md  srd_v2_audit.md  srd_v2_bugs_and_new_plan.md  srd_v2_chimera_leak_plan.md  srd_v2_final_plan.md  srd_v2_phase2plus_handoff.md  srd_v2_phase6_handoff.md  srd_v2_plan.md  srd_v2_results.md  srd_v3_early_plan.md  srd_v3_phase1_strand_relabel.md  srd_v3_phase2_nrna_siphon.md  srd_v3_phase2_oracle_findings.md  strand_channel_implementation_plan.md  strand_channel_theory_and_redesign.md  strand_llr_noise_floor_vcap_results.md
docs/calibration_integration/: cleanup_tracking.md  code_reference.md  implementation_plan.md  phase6_cleanup_plan.md
docs/code_review/: src_cleanup_plan.md  src_rigel_review_2026_04_20.md
docs/deprecated/: calibration_v3_vs_v4_comparison.md  calibration_v4_em_mixture_plan.md  strand_llr_binom_vs_betabinom.md  strand_llr_noise_floor_design.md  strand_llr_perfect_ss_failure.md  vcap_mixture_gdna_underestimation.md  vcap_mixture_p0_findings.md  vcap_mixture_p1_corrected.md
profile_output/: memory_timeline_default.csv  profile_report.txt  profile_summary.json
scripts/: _analyze_em_threads.py  _analyze_wrong_pool.py  _debug_tree.py  _diag_bias.py  _diag_ec_check.py  _diag_ec_manual.py  _diag_em_simulation.py  _diag_em_trace.py  _diag_filter_antisense.py  _diag_index_intervals.py  _diag_linc02912.py  _diag_linc02912_deep.py  _diag_nrna_frac.py  _diag_query_pattern.py  _diag_se_with_helper.py  _diag_short_exon.py  _diag_single_exon_wipeout.py  _eval_overlap_filter.py  _inspect_data.py  _parse_sample.py  _profile_real.py  _profile_with_sample.py  _symbolicate_sample.py  _test_sim_fix.py  _verify_corrected_gate.py  ablation_comprehensive.yaml  aggregate_alpha_sweep.py  aggregate_benchmarks.py  alpha_sweep_egfr.py  analyze_ablation.py  analyze_ablation_deep.py  analyze_ablation_synthesis.py  analyze_ablation_v2.py  analyze_bench_10_loci.py  analyze_benchmark_results.py  analyze_calibration.py  analyze_complex_locus.py  analyze_diagnostic.py  analyze_diffs.py  analyze_em_bottleneck.py  (+106 more)
sweep_results/: ablation_log.txt  ablation_v2_log.txt  calibration_large_log.txt
tests/: conftest.py  scoring_helpers.py  test_annotate.py  test_bam.py  test_bam_tag_parsing.py  test_batch_parity.py  test_betabinom_strand.py  test_bias.py  test_buffer.py  test_calibrated_density.py  test_calibration.py  test_calibration_integration.py  test_calibration_simple.py  test_calibration_stress.py  test_capture_class.py  test_categories.py  test_categorize.py  test_cli.py  test_core.py  test_count.py  test_counter.py  test_coverage_weight.py  test_cross_chunk.py  test_diagnostic.py  test_em_impl.py  test_equiv_class_sort_ab.py  test_estimator.py  test_fast_exp.py  test_fl_empirical_bayes.py  test_fl_mixture.py  test_frag_length_model.py  test_fragment.py  test_gdna.py  test_gdna_fl_scoring.py  test_gdna_frag_length.py  test_gdna_harmonic_length.py  test_golden_output.py  test_gtf.py  test_index.py  test_index_integrity.py  (+25 more)
(+884 files in other folders)
