[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hulkrna"
version = "0.1.0"
description = "Bayesian RNA-seq read counting tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Matthew Iyer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pysam>=0.22",
    "cgranges>=0.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
pileup = [
    "zarr>=2.16",
    "numcodecs>=0.12",
]

[project.scripts]
hulkrna = "hulkrna.cli:main"

[project.urls]
Homepage = "https://github.com/mkiyer/hulkrna"
Repository = "https://github.com/mkiyer/hulkrna"

[tool.hatch.build.targets.wheel]
packages = ["src/hulkrna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
