[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "rigel"
version = "0.1.0"
description = "Bayesian RNA-seq transcript quantification tool"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Matthew Iyer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pysam>=0.22",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
pileup = [
    "zarr>=2.16",
    "numcodecs>=0.12",
]

[project.scripts]
rigel = "rigel.cli:main"

[project.urls]
Homepage = "https://github.com/mkiyer/rigel"
Repository = "https://github.com/mkiyer/rigel"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# Tell scikit-build-core where to find the Python package
wheel.packages = ["src/rigel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
